compiler/test/fail_compilation/diag24812.d
/*
TEST_OUTPUT:
---
fail_compilation/diag24812.d(9): Error: enum `diag24812.Foo` enum `Foo` must have at least one member
enum Foo {}
^
---
*/
enum Foo {}
